# DesignPatternsWithModernCpp

./: .gitignore  DesignPatterns.md  Guidelines.md  ToDo.txt
AcyclicVisitor/AcyclicVisitor/: AcyclicVisitorConfig.h.in  CMakeLists.txt  Calculate.h  Draw.cpp  Main.cpp  Shape.h  Square.h
AdapterDesignPattern/: CMakeLists.txt  main.cpp  notes.md
BridgeDesignPattern/: notes.md
BridgeDesignPattern/ElectricCar/: CMakeLists.txt  Car.h  ElectricCar.cpp  ElectricCar.h  ElectricEngine.cpp  ElectricEngine.h  Engine.h  Main.cpp  notes.md
BridgeDesignPattern/pimplIdiomPerson/: CMakeLists.txt  Main.cpp  Person.cpp  Person.h
ChainOfResponsibility/: CMakeLists.txt  main.cpp
CommandDesignPattern/: CMakeLists.txt  main.cpp
CommandDesignPattern/java_remote_controller/: CeilingFan.java  CeilingFanOffCommand.java  CeilingFanOnCommand.java  Command.java  GarageDoor.java  GarageDoorDownCommand.java  GarageDoorUpCommand.java  Light.java  LightOffCommand.java  LightOnCommand.java  NoCommand.java  RemoteControl.java  RemoteLoader.java  SimpleRemoteControl.java  Stereo.java  StereoOffCommand.java  StereoOnWithCDCommand.java
CompositeDesignPattern/: CMakeLists.txt  main.cpp
CompoundPatterns/BeatMVC/: BeatBar.java  BeatController.java  BeatModel.java  BeatModelInterface.java  DJTestDrive.java  DJView.java  Readme.md  class_uml.wsd
CompoundPatterns/DuckReunion/: AbstractDuckFactory.java  CountingDuckFactory.java  DuckCall.java  DuckFactory.java  DuckSimulator.java  Flock.java  GooseAdapter.java  MallardDuck.java  Observable.java  QuackCounter.java  Quackable.java  Quackologist.java  RedheadDuck.java  RubberDuck.java  class_diagram.wsd  class_diagram_new.wsd  todo.md
DecoratorDesignPattern/: CMakeLists.txt  main.cpp
DecoratorDesignPattern/java_starbuzz/: Beverage.java  CondimentDecorator.java  DarkRoast.java  Decaf.java  Espresso.java  HouseBlend.java  Mocha.java  Soy.java  StarBuzzCoffee.java  Whip.java
ExternalPolymorphism/: CMakeLists.txt  main.cpp
IteratorDesignPattern/: CMakeLists.txt  main.cpp
MediatorDesignPattern/: CMakeLists.txt
ObserverDesignPattern/java_weather_station/: WeatherData.java  (+2 more)
ProxyDesignPattern/: CMakeLists.txt  main.cpp
ShapeVisitor/: notes.txt
SpecificationDesignPattern/: CMakeLists.txt  main.cpp
StrategyDesignPattern/StrategyWithDesignFlaw/: CMakeLists.txt  Main.cpp  StrategyWithDesignFlaw.h.in
StrategyDesignPattern/StrategyWithDesignFlaw/StrategyWithDesignFlaw/: Circle.h  DrawOpenGL.h  DrawStrategy.h  Main.cpp  Square.h  Triangle.h
StrategyDesignPattern/StrategyWithSeperateTemplateBaseClass/: CMakeLists.txt  Circle.h  DrawStrategy.h  Main.cpp  OpenGLCircleStrategy.h  OpenGLSquareStrategy.h  Shape.h  StrategyWithSeperateTemplateBaseClass.h.in
StrategyDesignPattern/StrategyWithSeperateTemplateBaseClass/StrategyWithSeperateTemplateBaseClass/: Main.cpp  Square.h
VisitorDesignPattern/ShapeVisitor/ShapeVisitor/: CMakeLists.txt  Draw.h  ShapeVisitor.cpp  Square.h
VisitorDesignPattern/VisitorVariantShape/VisitorVariantShape/: CMakeLists.txt  Main.cpp  Square.h
(+34 files in other folders)
